Add list ServiceOffering
