# app/controllers/users_controller.rb
@@ -13,4 +13,8 @@ class UsersController < ApplicationController
   def list_providers
     render json: Provider.all
   end
+
+  def list_service_offerings
+    render json: ServiceOffering.all
+  end
 end
